[gd_scene load_steps=9 format=3 uid="uid://d01cbixlcsqf5"]

[ext_resource type="Script" uid="uid://cgivlnrd43uox" path="res://Scouts.gd" id="1_a6if5"]
[ext_resource type="Texture2D" uid="uid://c2seahejttxhx" path="res://Art/pixil-frame-0.png" id="2_33vxr"]
[ext_resource type="Texture2D" uid="uid://c3fi82uqofwut" path="res://Art/Copper.png" id="3_gicjt"]
[ext_resource type="Texture2D" uid="uid://b1fiys7rwfgln" path="res://Art/Bronze.png" id="4_5f26q"]
[ext_resource type="Texture2D" uid="uid://cev6xi8jd8a54" path="res://Art/Silver.png" id="5_1ce0p"]
[ext_resource type="Texture2D" uid="uid://bqs3a18gy8bn" path="res://Art/Gold.png" id="6_a07cm"]
[ext_resource type="Texture2D" uid="uid://cjg1ng4tp7gpr" path="res://Art/Platinum.png" id="7_nn0yo"]
[ext_resource type="Texture2D" uid="uid://uuke7exo55ju" path="res://Art/Diamond.png" id="8_mauvk"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a6if5")

[node name="Pixil-frame-0" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(0.6, 0.5875)
texture = ExtResource("2_33vxr")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_use_anchors_ = true

[node name="CopperOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("3_gicjt")

[node name="CopperOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("3_gicjt")

[node name="CopperOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("3_gicjt")

[node name="BronzeOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("4_5f26q")

[node name="BronzeOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("4_5f26q")

[node name="BronzeOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("4_5f26q")

[node name="SilverOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("5_1ce0p")

[node name="SilverOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("5_1ce0p")

[node name="SilverOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("5_1ce0p")

[node name="GoldOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("6_a07cm")

[node name="GoldOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("6_a07cm")

[node name="GoldOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("6_a07cm")

[node name="PlatinumOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("7_nn0yo")

[node name="PlatinumOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("7_nn0yo")

[node name="PlatinumOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("7_nn0yo")

[node name="DiamondOC1" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 344)
texture = ExtResource("8_mauvk")

[node name="DiamondOC2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 344)
texture = ExtResource("8_mauvk")

[node name="DiamondOC3" type="Sprite2D" parent="."]
visible = false
position = Vector2(944, 344)
texture = ExtResource("8_mauvk")

[node name="Choose" type="Label" parent="."]
offset_right = 1152.0
offset_bottom = 128.0
text = "Choose a Scout"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout1Button" type="Button" parent="."]
offset_left = 144.0
offset_top = 568.0
offset_right = 272.0
offset_bottom = 632.0
text = "Select"
metadata/_edit_use_anchors_ = true

[node name="Scout2Button" type="Button" parent="."]
offset_left = 512.0
offset_top = 568.0
offset_right = 640.0
offset_bottom = 632.0
text = "Select"
metadata/_edit_use_anchors_ = true

[node name="Scout3Button" type="Button" parent="."]
offset_left = 880.0
offset_top = 568.0
offset_right = 1008.0
offset_bottom = 632.0
text = "Select"
metadata/_edit_use_anchors_ = true

[node name="Scout1Name" type="Label" parent="."]
offset_left = 32.0
offset_top = 128.0
offset_right = 384.0
offset_bottom = 192.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout2Name" type="Label" parent="."]
offset_left = 400.0
offset_top = 128.0
offset_right = 752.0
offset_bottom = 192.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout3Name" type="Label" parent="."]
offset_left = 768.0
offset_top = 128.0
offset_right = 1120.0
offset_bottom = 192.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout1Rank" type="Label" parent="."]
offset_left = 32.0
offset_top = 192.0
offset_right = 384.0
offset_bottom = 256.0
text = "Rank"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout2Rank" type="Label" parent="."]
offset_left = 400.0
offset_top = 192.0
offset_right = 752.0
offset_bottom = 256.0
text = "Rank"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout3Rank" type="Label" parent="."]
offset_left = 768.0
offset_top = 192.0
offset_right = 1120.0
offset_bottom = 256.0
text = "Rank"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout1Boost" type="Label" parent="."]
offset_left = 32.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 320.0
text = "Boost"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout2Boost" type="Label" parent="."]
offset_left = 400.0
offset_top = 256.0
offset_right = 752.0
offset_bottom = 320.0
text = "Boost"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout3Boost" type="Label" parent="."]
offset_left = 768.0
offset_top = 256.0
offset_right = 1120.0
offset_bottom = 320.0
text = "Boost"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout1Focus" type="Label" parent="."]
offset_left = 32.0
offset_top = 320.0
offset_right = 384.0
offset_bottom = 384.0
text = "Focus"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout2Focus" type="Label" parent="."]
offset_left = 400.0
offset_top = 320.0
offset_right = 752.0
offset_bottom = 384.0
text = "Focus"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout3Focus" type="Label" parent="."]
offset_left = 768.0
offset_top = 320.0
offset_right = 1120.0
offset_bottom = 384.0
text = "Focus"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout1Slots" type="Label" parent="."]
offset_left = 32.0
offset_top = 384.0
offset_right = 384.0
offset_bottom = 448.0
text = "Slots"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout2Slots" type="Label" parent="."]
offset_left = 400.0
offset_top = 384.0
offset_right = 752.0
offset_bottom = 448.0
text = "Slots"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Scout3Slots" type="Label" parent="."]
offset_left = 768.0
offset_top = 384.0
offset_right = 1120.0
offset_bottom = 448.0
text = "Slots"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Scout1Button" to="." method="_on_scout_1_button_pressed"]
[connection signal="pressed" from="Scout2Button" to="." method="_on_scout_2_button_pressed"]
[connection signal="pressed" from="Scout3Button" to="." method="_on_scout_3_button_pressed"]
